# g360-erp-preorder-allocator

./: .gitignore  INSTRUCCIONES.txt  README.md  main.py  pyproject.toml  requirements.txt  sync_portable.py
g360-preorder-allocator-portable/: create_shortcut.vbs  run.bat
g360-preorder-allocator-portable/src/core/: exporter.py  parser.py
g360-preorder-allocator-portable/src/ui/: consolidate_view.py  selection_view.py  theme.py  upload_view.py
src/: app.py
src/core/: exporter.py  models.py
src/ui/: consolidate_view.py  selection_view.py  theme.py
