[project]
name = "g360-erp-preorder-allocator"
version = "1.0.0"
description = "Analisis de compras y participacion por SKU - PreOrder Allocator"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.23.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.2",
]

[project.urls]
Homepage = "https://g360.pe"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
